# py-umik-base-app

./: .env  .gitignore  CONTRIBUTING.md  METRICS.md  Makefile  README.md  UMIK-1.md  cspell.txt  pyproject.toml  sample_recording_metrics.csv  tests_integration.sh
.github/workflows/: ci.yml  publish.yml
docs/: ARCHITECTURE.md  METRICS.md  UMIK-1.md
docs/posts/: 02 - Pipeline Pattern.md  03 - Low Barrier.md  06 - PyPI.md  07 - Modern DX.md  09 - Audio Engineering.md  1.md  2.md  3.md  4.md  5.md  7.md
src/: __init__.py  audio_app_config.py  base_audio_app.py  base_thread_app.py  settings.py
src/app/: audio_batch_analysis.py  audio_file_analysis.py  calibrate.py  decibel_meter.py  enhance_voice.py  list_audio_devices.py  plot_audio_metrics.py  record.py
src/py_umik/: __init__.py  _version.py  settings.py
src/py_umik/apps/: basic_recorder.py  list_audio_devices.py  metrics_analyzer.py  metrics_plot.py  real_time_meter.py  umik1_calibrator.py
src/py_umik/core/: __init__.py  base_app.py  config.py  consumer_thread.py  interfaces.py  listener_thread.py  pipeline.py  thread_app.py
src/py_umik/hardware/: cache_strategy.py  calibrator.py  calibrator_adapter.py  config.py  selector.py
src/py_umik/io/: recorder.py  recorder_adapter.py
src/py_umik/processing/: audio_metrics.py
src/py_umik/tests/core/: test_base_app.py  test_consumer_thread.py  test_core_config.py  test_datetime_stamp.py  test_listener_thread.py  test_pipeline.py  test_thread_app.py
src/py_umik/tests/hardware/: test_cache_strategy.py  test_calibrator.py  test_hardware_config.py  test_selector.py
src/py_umik/tests/processing/: test_audio_metrics.py
src/samples/apps/: basic_recorder.py  real_time_meter.py  umik1_calibrator.py
src/scripts/: audio_batch_analysis.py  audio_file_analysis.py  list_audio_devices.py
src/tests/core/: test_base_app.py  test_consumer_thread.py  test_core_config.py  test_datetime_stamp.py  test_listener_thread.py  test_pipeline.py  test_thread_app.py
src/tests/hardware/: test_cache_strategy.py  test_calibrator.py  test_hardware_config.py  test_selector.py
src/tests/processing/: test_audio_metrics.py
tests/app/: test_audio_app_config.py  test_base_audio_app.py
umik-1/: 7175488_fir_1024taps_48000hz.npy  7175488_fir_128taps_48000hz.npy  7175488_fir_256taps_48000hz.npy  7175488_fir_512taps_48000hz.npy
