[project]
name = "umik-base-app"
description = "Base utilities for working with the Umik-1 microphone in Python applications."
dynamic = ["version"]
authors = [
    {name = "Daniel Collier", email = "danielfcollier@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14" 

# Production Dependencies
dependencies = [
    "numpy~=2.3.3",
    "scipy~=1.16.2",
    "pydantic~=2.12.3",
    "sounddevice~=0.5.3",
    "librosa~=0.11.0",
    "pyloudnorm~=0.1.1",
    "pydantic-settings>=2.12.0",
    "pydub>=0.25.1",
    "noisereduce>=3.0.3",
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
]

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_file = "src/py_umik/_version.py"
local_scheme = "no-local-version"

# Development Dependencies (used for linting/testing)
[project.optional-dependencies]
dev = [
    "ruff~=0.14.1",
    "mypy~=1.18.2",
    "pytest>=9.0.2",
    "pytest-cov",
]

[project.urls]
"Homepage" = "https://github.com/danielfcollier/py-umik-base-app"
"Bug Tracker" = "https://github.com/danielfcollier/py-umik-base-app/issues"

[project.scripts]
umik-calibrate = "py_umik.apps.umik1_calibrator:main"
umik-list-devices = "py_umik.apps.list_audio_devices:main"
umik-real-time-meter = "py_umik.apps.real_time_meter:main"
umik-recorder = "py_umik.apps.basic_recorder:main"
umik-metrics-analyzer = "py_umik.apps.metrics_analyzer:main"
umik-metrics-plot = "py_umik.apps.metrics_plot:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "src/py_umik/tests",
]
pythonpath = "src"

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".venv",
    ".git",
    "__pycache__",
    ".github",
    "src/py_umik/_version.py",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C90", "UP"]

[tool.ruff.lint.mccabe]
max-complexity = 30

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
namespace_packages = true
